--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^4.1.0",
     "lodash": "^4.17.19",
-    "yargs-parser": "^13.1.2"
+    "yargs-parser": "^13.1.2",
+    "lodash.template": "^4.5.0",
+    "minimatch": "^3.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
